Fix .overview-item background stretch

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -116,6 +116,12 @@ section.footnotes {
     color: rgba(255, 255, 255, 0.8);
 }
 
+.overview-item {
+    min-height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .overview-item ul {
     list-style: circle;
     padding-left: 15px;
